# snapdog-os

./: CHANGELOG.md  Makefile  README.md  docker-compose.yml  release-please-config.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.wrangler/cache/: wrangler-account.json
buildroot/: Config.in  kernel.fragment
buildroot/board/raspberrypi/: post-build.sh
buildroot/package/configtxt/: Config.in  configtxt.mk
buildroot/package/copy-overlays/: Config.in  copy-overlays.mk
buildroot/package/raspi-wifi/: Config.in  dnsmasq.service  hostapd.service  raspi-wifi.mk
buildroot/package/snapdog-base/: Config.in  snapdog-base.mk
buildroot/package/snapdog-client/: Config.in  snapdog-client.default  snapdog-client.mk  snapdog-client.service
buildroot/package/snapdog-ctrl/: Config.in  snapdog-ctrl.mk  snapdog-ctrl.service
buildroot/package/snapdog-os-all/: Config.in
buildroot/package/snapdog-rauc/: boot-handler.sh
buildroot/package/snapdog-server/: snapdog-data-init
buildroot/package/snapdog-tools/: Config.in  activate-data-partition  (+4 more)
buildroot/rauc/: create-bundle.sh  manifest.raucm.in
buildroot/scripts/: patch-buildroot
dev/: Dockerfile  docker-compose.yml
docs/: rauc-plan.md
snapdog-ctrl/: Cargo.toml  build.rs
snapdog-ctrl/src/: auth.rs  auto_update.rs  config_txt.rs  main.rs  mock.rs  network.rs  rauc.rs  routes.rs  server_config.rs  settings.rs  system.rs
snapdog-ctrl/webui/: core  package-lock.json  package.json
snapdog-ctrl/webui/messages/: de.json  en.json  es.json  fr.json  nl.json
snapdog-ctrl/webui/src/app/: page.tsx
snapdog-ctrl/webui/src/components/: AboutButton.tsx
snapdog-ctrl/webui/src/lib/: api.ts
(+12 files in other folders)
