[package]
name = "snapdog-ctrl"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/metaneutrons/snapdog-os"
authors = ["Fabian Schmieder"]
description = "Web-based device setup for SnapDog OS"

[[bin]]
name = "snapdog-ctrl"
path = "src/main.rs"

[features]
default = ["mdns-astro"]
mdns-astro = ["dep:astro-dnssd"]
mdns-sd = ["dep:mdns-sd"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Web framework
axum = { version = "0.8", features = ["json", "ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-journald = "0.3"

# TOML editing (preserves comments)
toml_edit = "0.25"

# Error handling
thiserror = "2"
anyhow = "1"

# mDNS service discovery
astro-dnssd = { version = "0.3.6", optional = true }
mdns-sd = { version = "0.20", optional = true }

# Embedded static files
rust-embed = { version = "8", features = ["axum"] }

# MIME type detection
mime_guess = "2"

# Authentication
bcrypt = "0.19.1"
rand = "0.10.1"

# D-Bus (RAUC OTA)
zbus = "5.15.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[profile.release]
lto = true
strip = true
codegen-units = 1
